--- a/style/index.css
+++ b/style/index.css
@@ -4,3 +4,8 @@
     box-sizing: border-box;
 }
 
+body{
+    background-color: bisque;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 16px;
+}
