--- a/style/index.css
+++ b/style/index.css
@@ -25,7 +25,7 @@ header h1{
     font-size: 2.5rem;
 }
 
-h3{
+.panel h3{
     margin-right: 5rem;
 }
 
@@ -40,22 +40,13 @@ button{
     margin-top: 2rem;
 }
 
+.grid{
+    display: grid;
+    grid-template-columns: 320px 200px;
+}
+
 .board{
     border: solid 5px;
-}
-
-.grid{
-    width: 200px;
-    height: 400px;
-    display: flex;
-    flex-wrap: wrap;
-    margin: auto;
-    background-color: rgb(2, 2, 102);
-}
-
-.grid div{
-    width: 20px;
-    height: 20px;
 }
 
 .tetrimino{
