--- a/style/index.css
+++ b/style/index.css
@@ -25,6 +25,11 @@ header h1{
     font-size: 2.5rem;
 }
 
+main{
+    height: 80vh;
+    justify-content: center;
+}
+
 .panel h3{
     margin-right: 5rem;
 }
@@ -43,6 +48,7 @@ button{
 .grid{
     display: grid;
     grid-template-columns: 320px 200px;
+    justify-content: center;
 }
 
 .board{
